...
fun AboutScreen(
    modifier: Modifier = Modifier
) {
    Box(
        modifier = modifier
            .fillMaxSize()
            .testTag("about_page_content"),
        contentAlignment = Alignment.Center
    ) {
        AboutContent()
    }
}

...
